--- a/index.css
+++ b/index.css
@@ -1,61 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-#h1 {
-    color: rgb(0, 0, 0);
-    font-size: 40px;
-    text-shadow: 20px 6px 13px #000000;
-    font-family: 'Dancing Script';
-    text-align: center;
-    box-shadow: rgb(84 84 84) 7px 6px 10px 2px;
-    border: 6px solid rgb(243 243 184);
+body {
+    background-image: url("image/2825710.gif");
+}
+
+.menu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(119, 119, 119);
+    box-shadow:0px 13px 16px 5px rgb(77, 77, 77);
+    font-size: 23px;
     border-radius: 20px;
-    width: 70%;
-    margin: auto;
 }
-
-.h1 {
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    text-shadow: rgb(84 84 84) 20px 9px 7px;
-    font-family: cursive;
+ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+li{
+    width: 50px;
+    float: left;
     text-align: center;
+    padding: 10px 0;
+    color: rgb(0, 0, 0);
+    transition: 1a;
 }
-
-.container {
-    background-image: url("image/anh-nen-nhe-nhang-nen-trang-dep_025019201.jpg");
-    background-size: auto;
+.active{
+    color: #fff;
 }
-
-@keyframes kf1 {
-    from {
-        font-size: 20px;
-        color: rgb(0, 0, 0);
-        text-align: center;
-        font-family: 'Dancing Script';
-        text-shadow: 20px 6px 7px rgb(84 84 84);
-    }
-    to {
-        font-size: 40px;
-        color: rgb(0, 0, 0);
-        text-align: center;
-        font-family: 'Dancing Script';
-        text-shadow: 20px 6px 7px rgb(84 84 84);
-    }
+i{
+    position: relative;
+    z-index: -1;
 }
-
-.ele {
-    padding: 10px;
-}
-
-.exam1 {
-    animation-name: kf1;                 
-    animation-duration: 5s;  
-    animation-iteration-count: infinite;
-    height: 100px;
-}
-
-.header {
+#action{
+    position: absolute;
     top: 0;
+    left: 0;
+    background: #ff0000;
+    width: 50px;
+    height: 100%;
+    z-index: -2;
+    transition: 1s;
+    border-radius: 20px;
+}
+#cation::before{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 39px;
-    z-index: 100;
+    height: 100%;
+    background: #111111;
+    content: '';
+    filter: blur(33px);
+    transition: 1s;
+}
+ul li:nth-child(2).active ~ #action{
+    background-color: rgb(0, 255, 64);
+}
+ul li:nth-child(3).active ~ #action{
+    background-color: rgb(229, 255, 0);
+}
+ul li:nth-child(4).active ~ #action{
+    background-color: rgb(0, 247, 255);
+}
+
+
+/* header */
+img{
+    margin-top: 100px;
+    width: 120px;
+    height: 120px;
+    margin-left: 10px;
+}
+header{
+    margin-top: 1em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+header > img{
+    width: 9em;
+    height: 9em;
+    border-radius: 100%;
+    border: 2px solid #fff;
+}
+header > h1{
+    display: inline-block;
+    font-size: 40px;
+    font-weight: bold;
+    border-radius: 2em;
+    background-color: #000;
+    color: #fff;
+    padding: 10px 30px;
+    font-family: 'Courier New', Courier, monospace;
+    text-shadow: 0px 9px 9px #ffffff;
+}
+
+.radius{
+    background-image: url("image/Tong-hop-hinh-nen-dien-thoai-dep-nhat.jpg");
+    background-repeat: no-repeat, repeat;
+    text-align: center;
+    width: 500px;
+    height: 900px;
+}
+header > h4{
+    margin-top: 10px;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 2em;
+    background-color: #000;
+    color: #fff;
+    padding: 10px 20px;
+    font-family: 'Courier New', Courier, monospace;
+    text-shadow: 0px 9px 9px #ffffff;;
 }
