--- a/index.css
+++ b/index.css
@@ -1,118 +1,96 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+
+:root {
+  --pink-color: #00a396;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
 body {
-    background-image: url("image/2825710.gif");
+  height: 100vh;
+  background: linear-gradient(45deg, #01818a, #00ffff);
+  /* background-image: url("image/2825710.gif"); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.menu {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(119, 119, 119);
-    box-shadow:0px 13px 16px 5px rgb(77, 77, 77);
-    font-size: 23px;
-    border-radius: 20px;
-}
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-li{
-    width: 50px;
-    float: left;
-    text-align: center;
-    padding: 10px 0;
-    color: rgb(0, 0, 0);
-    transition: 1a;
-}
-.active{
-    color: #fff;
-}
-i{
-    position: relative;
-    z-index: -1;
-}
-#action{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #ff0000;
-    width: 50px;
-    height: 100%;
-    z-index: -2;
-    transition: 1s;
-    border-radius: 20px;
-}
-#cation::before{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #111111;
-    content: '';
-    filter: blur(33px);
-    transition: 1s;
-}
-ul li:nth-child(2).active ~ #action{
-    background-color: rgb(0, 255, 64);
-}
-ul li:nth-child(3).active ~ #action{
-    background-color: rgb(229, 255, 0);
-}
-ul li:nth-child(4).active ~ #action{
-    background-color: rgb(0, 247, 255);
+.card {
+  width: 300px;
+  height: 400px;
+  border-radius: 10px;
+  text-align: center;
+  background-color: #242628;
+  overflow: hidden;
+  margin: 0 30px;
 }
 
-
-/* header */
-img{
-    margin-top: 100px;
-    width: 120px;
-    height: 120px;
-    margin-left: 10px;
-}
-header{
-    margin-top: 1em;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-header > img{
-    width: 9em;
-    height: 9em;
-    border-radius: 100%;
-    border: 2px solid #fff;
-}
-header > h1{
-    display: inline-block;
-    font-size: 40px;
-    font-weight: bold;
-    border-radius: 2em;
-    background-color: #000;
-    color: #fff;
-    padding: 10px 30px;
-    font-family: 'Courier New', Courier, monospace;
-    text-shadow: 0px 9px 9px #ffffff;
+.card__img {
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  transition: 0.25s;
+  margin: 0 auto;
+  transform: translateY(25px);
+  border-radius: 50%;
+  border: 4px solid #ffe0e0;
+  cursor: pointer;
 }
 
-.radius{
-    background-image: url("image/Tong-hop-hinh-nen-dien-thoai-dep-nhat.jpg");
-    background-repeat: no-repeat, repeat;
-    text-align: center;
-    width: 500px;
-    height: 900px;
+.card__img:hover {
+  width: 100%;
+  height: 100%;
+  border-radius: unset;
+  border: unset;
+  transform: unset;
 }
-header > h4{
-    margin-top: 10px;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 2em;
-    background-color: #000;
-    color: #fff;
-    padding: 10px 20px;
-    font-family: 'Courier New', Courier, monospace;
-    text-shadow: 0px 9px 9px #ffffff;;
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+h2 {
+  color: white;
+  margin-top: 40px;
+}
+
+p {
+  color: #FFFFE0;
+}
+
+.card__social a {
+  text-decoration: none;
+  color: white;
+  margin: 25px 20px 40px;
+  display: inline-block;
+  font-size: 18px;
+  transition: 0.25s;
+}
+
+.card__social a:hover {
+  color: #ff0000;
+}
+
+button {
+  outline: none;
+  border: none;
+  color: white;
+  background-color: transparent;
+  border: 1px solid #FFFFE0;
+  padding: 10px 20px;
+  border-radius: inherit;
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+button:hover {
+  background-color: #FF0000;
 }
